# aparapi-builder-cmake

./: .gitignore  CMakeLists.txt  README.md  bootstrap-one-time.sh  build.js
patches/: aparapi-jni.patch  aparapi-native.patch  aparapi.patch
syncleus/: Aparapi.cpp.patched  JNIExceptions.h.patched  NativeLoader.java.patched  aparapi-examples.patch  aparapi-native.patch
